// Original file: src/accounts_and_balances.proto


export interface GrpcCreateAccount {
  'requestedId'?: (string);
  'type'?: (string);
  'ownerId'?: (string);
  'currencyCode'?: (string);
}

export interface GrpcCreateAccount__Output {
  'requestedId'?: (string);
  'type'?: (string);
  'ownerId'?: (string);
  'currencyCode'?: (string);
}
