// Original file: proto_files/common.proto


export interface GrpcControlPlane_Currency {
  'currencyCode'?: (string);
  'currencyNum'?: (string);
  'currencyDecimals'?: (number);
}

export interface GrpcControlPlane_Currency__Output {
  'currencyCode'?: (string);
  'currencyNum'?: (string);
  'currencyDecimals'?: (number);
}
